--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ workflows:
       - test_unit:
          requires:
            - build
-      - test_e2e:
+      - end_to_end:
            requires:
             - build
       - lint:
