--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,90 +1,108 @@
-workflows:
-  version: 2
-  my_workflow:
-    jobs:
-      - build
-      - test_unit:
-         requires:
-           - build
-      - end_to_end:
-           requires:
-            - build
-      - lint:
-          requires:
-            - build
-version: 2
-jobs:
-  build:
-    docker:
-      - image: cimg/node:14.15.0 # the primary container, where your job's commands are run
-        auth:
-          username: xaela37
-          password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
-    steps:
-      - checkout # check out the code in the project directory
-      - run: yarn install
-      - save_cache:
-          key: npm-v1-dependencies-{{ checksum "yarn.lock" }}
-          paths:
-          - node_modules #?a marche jusqu'ici pour l'instant
-  test_unit:
-    docker:
-      - image: cimg/node:14.15.0
-        auth:
-          username: xaela37
+--- 
+jobs: 
+  build: 
+    docker: 
+      - 
+        auth: 
           password: $DOCKERHUB_PASSWORD
-      - image: circleci/postgres:9.6.2-alpine
-        auth:
           username: xaela37
-          password: $DOCKERHUB_PASSWORD
-        environment:
-          POSTGRES_USER: pguser
-          POSTGRES_DB: pgdb
-          POSTGRES_PASSWORD: pass
-    steps:
-      - checkout # check out the code in the project directory
-      - restore_cache:
-          key: npm-v1-dependencies-{{ checksum "yarn.lock" }}
-      - run:
-          command: yarn test
-          environment:
-            DATABASE_URL: postgres://psqluer:psqlpassword@localhost:5432/psqluer
-  end_to_end:
-    docker:
-      - image: cimg/node:14.15.0
-        auth:
-          username: xaela37
-          password: $DOCKERHUB_PASSWORD
-      - image: circleci/postgres:9.6.2-alpine
-        auth:
-          username: xaela37
-          password: $DOCKERHUB_PASSWORD
-        environment:
-          POSTGRES_USER: pguser
-          POSTGRES_DB: pgdb
-          POSTGRES_PASSWORD: pass
-    steps:
+        image: "cimg/node:14.15.0"
+    steps: 
       - checkout
-      - restore_cache:
-          keys:
-             - npm-v1-dependencies-{{ checksum "yarn.lock" }}
-       - run:
-           name: "yarn test"
-           command: yarn test:e2e
-           environment:
-             DATABASE_URL: postgres://pguser:pass@localhost:5432/pgdb
-  lint:
-    docker:
-      - image: cimg/node:14.15.0 # the primary container, where your job's commands are run
-        auth:
+      - 
+        run: "yarn install"
+      - 
+        save_cache: 
+          key: "npm-v1-dependencies-{{ checksum \"yarn.lock\" }}"
+          paths: 
+            - node_modules
+  end_to_end: 
+    docker: 
+      - 
+        auth: 
+          password: $DOCKERHUB_PASSWORD
           username: xaela37
-          password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
-    steps:
-      - checkout # check out the code in the project directory
-      - restore_cache:
-          key: npm-v1-dependencies-{{ checksum "yarn.lock" }}  
-      - run:
+        image: "cimg/node:14.15.0"
+      - 
+        auth: 
+          password: $DOCKERHUB_PASSWORD
+          username: xaela37
+        environment: 
+          POSTGRES_DB: pgdb
+          POSTGRES_PASSWORD: pass
+          POSTGRES_USER: pguser
+        image: "circleci/postgres:9.6.2-alpine"
+    steps: 
+      - checkout
+      - 
+        restore_cache: 
+          keys: 
+            - "npm-v1-dependencies-{{ checksum \"yarn.lock\" }}"
+      - 
+        run: 
+          command: "yarn test:e2e"
+          environment: 
+            DATABASE_URL: "postgres://pguser:pass@localhost:5432/pgdb"
+          name: "yarn test"
+  lint: 
+    docker: 
+      - 
+        auth: 
+          password: $DOCKERHUB_PASSWORD
+          username: xaela37
+        image: "cimg/node:14.15.0"
+    steps: 
+      - checkout
+      - 
+        restore_cache: 
+          key: "npm-v1-dependencies-{{ checksum \"yarn.lock\" }}"
+      - 
+        run: 
+          command: |-
+              yarn lint
+              yarn format:check
           name: "step lint"
-          command: |
-            yarn lint
-            yarn format:check
+  test_unit: 
+    docker: 
+      - 
+        auth: 
+          password: $DOCKERHUB_PASSWORD
+          username: xaela37
+        image: "cimg/node:14.15.0"
+      - 
+        auth: 
+          password: $DOCKERHUB_PASSWORD
+          username: xaela37
+        environment: 
+          POSTGRES_DB: pgdb
+          POSTGRES_PASSWORD: pass
+          POSTGRES_USER: pguser
+        image: "circleci/postgres:9.6.2-alpine"
+    steps: 
+      - checkout
+      - 
+        restore_cache: 
+          key: "npm-v1-dependencies-{{ checksum \"yarn.lock\" }}"
+      - 
+        run: 
+          command: "yarn test"
+          environment: 
+            DATABASE_URL: "postgres://psqluer:psqlpassword@localhost:5432/psqluer"
+version: 2
+workflows: 
+  my_workflow: 
+    jobs: 
+      - build
+      - 
+        test_unit: 
+          requires: 
+            - build
+      - 
+        end_to_end: 
+          requires: 
+            - build
+      - 
+        lint: 
+          requires: 
+            - build
+  version: 2
