--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,6 +88,22 @@ jobs:
           command: "yarn test"
           environment: 
             DATABASE_URL: "postgres://psqluer:psqlpassword@localhost:5432/psqluer"
+    heroku_deploy:
+    docker:
+      - image: buildpack-deps:trusty
+    steps:
+      - checkout
+      - run:
+          name: Heroku Deploy
+          command: git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git HEAD:main 
+      - run:
+          name: Smoke Test
+          command: |
+            HTTPCODE=`curl -s -o /dev/null -w "%{http_code}" https://$HEROKU_APP_NAME.herokuapp.com/`
+            if [ "$HTTPCODE" -ne 200 ];then
+                echo "heroku app not responding, failing deploy"
+                exit 1
+            fi
 version: 2
 workflows: 
   my_workflow: 
@@ -105,4 +121,11 @@ workflows:
         lint: 
           requires: 
             - build
+      -
+        heroku_deploy:
+            requires:
+              - build
+              - test_unit
+              - end_to_end
+              - lint
   version: 2
