--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,3 @@
---- 
 jobs: 
   build: 
     docker: 
@@ -64,13 +63,11 @@ jobs:
           name: "step lint"
   test_unit: 
     docker: 
-      - 
-        auth: 
+      - auth: 
           password: $DOCKERHUB_PASSWORD
           username: xaela37
         image: "cimg/node:14.15.0"
-      - 
-        auth: 
+      - auth: 
           password: $DOCKERHUB_PASSWORD
           username: xaela37
         environment: 
@@ -80,11 +77,9 @@ jobs:
         image: "circleci/postgres:9.6.2-alpine"
     steps: 
       - checkout
-      - 
-        restore_cache: 
+      - restore_cache: 
           key: "npm-v1-dependencies-{{ checksum \"yarn.lock\" }}"
-      - 
-        run: 
+      - run: 
           command: "yarn test"
           environment: 
             DATABASE_URL: "postgres://psqluer:psqlpassword@localhost:5432/psqluer"
