--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
       - auth: 
           password: $DOCKERHUB_PASSWORD
           username: xaela37
-        image: "cimg/node:14.15.0"
+        image: circleci/node:lts-fermium
     working_directory: ~/repo
     steps:
       - checkout
@@ -24,7 +24,7 @@ jobs:
       - auth: 
           password: $DOCKERHUB_PASSWORD
           username: xaela37
-        image: "cimg/node:14.15.0"
+        image: circleci/node:lts-fermium
     steps:
       - checkout
       - restore_cache:
@@ -37,7 +37,7 @@ jobs:
       - auth: 
           password: $DOCKERHUB_PASSWORD
           username: xaela37
-        image: "cimg/node:14.15.0"
+        image: circleci/node:lts-fermium
       - auth: 
           password: $DOCKERHUB_PASSWORD
           username: xaela37
