--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,7 +74,7 @@ jobs:
       - checkout
       - run:
           name: Heroku Deploy
-          command: git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git HEAD:main 
+          command: git push https://heroku:$HEROKU_API_KEY@git.heroku.com/backend-final-devops.git HEAD:main 
       - run:
           name: Smoke Test
           command: |
