--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,8 @@ jobs:
           key: dependencies-{{ checksum "package.json" }}-v1
       - run:
           command: yarn test
-          
+          environment:
+            DATABASE_URL: postgres://psqluer:psqlpassword@localhost:5432/psqluer
   end_to_end: 
     docker:
       - image: circleci/node:lts-fermium
