--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,9 +33,9 @@ jobs:
       - image: circleci/node:lts-fermium
       - image: circleci/postgres:9.6.5
         environment:
-          POSTGRES_DB: psqluer
-          POSTGRES_USER: psqluer
-          POSTGRES_PASSWORD: psqlpassword
+          POSTGRES_DB: $PG_DB
+          POSTGRES_USER: $PG_USER
+          POSTGRES_PASSWORD: $PG_PASS
     working_directory: ~/repo
     steps:
       - checkout
@@ -44,7 +44,7 @@ jobs:
       - run:
           command: yarn test:e2e
           environment:
-            DATABASE_URL: postgres://psqluer:psqlpassword@localhost:5432/psqluer
+            DATABASE_URL: postgres://$PG_USER:$PG_PASS@localhost:5432/$PG_DB
   lint: 
     docker: 
       - auth: 
