--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,7 @@
 jobs: 
   build: &shared-config
     docker: 
-      - auth: 
-          password: $DOCKERHUB_PASSWORD
-          username: xaela37
-        image: circleci/node:lts-fermium
+      - image: circleci/node:lts-fermium
     working_directory: ~/repo
     steps:
       - checkout
@@ -46,11 +43,7 @@ jobs:
           environment:
             DATABASE_URL: postgres://$PG_USER:$PG_PASS@localhost:5432/$PG_DB
   lint: 
-    docker: 
-      - auth: 
-          password: $DOCKERHUB_PASSWORD
-          username: xaela37
-        image: "cimg/node:lts-fermium"
+    <<: *shared-config
     steps: 
       - checkout
       - restore_cache: 
