--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,6 +68,28 @@ jobs:
                 echo "heroku app not responding, failing deploy"
                 exit 1
             fi
+            
+  docker-build:
+    working_directory: /dockerapp
+    docker:
+      - image: docker:17.05.0-ce-git
+    steps:
+      - checkout
+      - setup_remote_docker:
+          version: 19.03.13
+      - run:
+          name: Build application Docker image
+          command: |
+            docker build -t app . 
+      - deploy:
+          name: Publish application to docker hub
+          command: |
+            docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_PASSWORD
+            docker tag app $DOCKERHUB_USERNAME/$DOCKERHUB_APP_NAME:$CIRCLE_BUILD_NUM
+            docker tag app $DOCKERHUB_USERNAME/$DOCKERHUB_APP_NAME:latest
+            docker push $DOCKERHUB_USERNAME/$DOCKERHUB_APP_NAME:$CIRCLE_BUILD_NUM
+            docker push $DOCKERHUB_USERNAME/$DOCKERHUB_APP_NAME:latest
+
 
 version: 2
 workflows: 
@@ -87,4 +109,18 @@ workflows:
             - test_unit
             - end_to_end
             - lint
+          filters:
+           branches:
+             only: main
+              
+      - docker_build:
+          requires:
+          - build
+          - test_unit
+          - end_to_end
+          - lint
+          - heroku_deploy
+          filters:
+            branches:
+              only: main
   version: 2
