👷 Added Docker build and push

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,7 +69,7 @@ jobs:
                 exit 1
             fi
             
-  docker-build:
+  docker_build:
     working_directory: /dockerapp
     docker:
       - image: docker:17.05.0-ce-git
